# apps/api/internal/categories/application/service.go
@@ -18,3 +18,11 @@ func NewService(repo ports.Repository) *Service {
 func (s *Service) List(ctx context.Context) ([]domain.Category, error) {
 	return s.repo.List(ctx)
 }
+
+func (s *Service) Create(ctx context.Context, name, direction string) (domain.Category, error) {
+	c, err := domain.NewCategory(name, direction)
+	if err != nil {
+		return domain.Category{}, err
+	}
+	return s.repo.Create(ctx, c)
+}
