# apps/api/internal/categories/ports/repository.go
@@ -8,4 +8,5 @@ import (
 
 type Repository interface {
 	List(ctx context.Context) ([]domain.Category, error)
+	Create(ctx context.Context, c domain.Category) (domain.Category, error)
 }
